--- a/terraform/deployments/applications/jenkins.yaml
+++ b/terraform/deployments/applications/jenkins.yaml
@@ -1,40 +1,45 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: jenkins-deployment
+  name: jenkins-deploy
   labels:
     env: dev
-    project: javawebapp
     app: jenkins
+    project: javawebapp
 spec:
   replicas: 1
   selector:
     matchLabels:
-      env: dev
-      project: javawebapp
       app: jenkins
   template:
     metadata:
       labels:
-        env: dev
-        project: javawebapp
         app: jenkins
     spec:
       containers:
       - name: jenkins
-        image: jenkins/jenkins:latest
+        image: jenkins/jenkins
         ports:
         - containerPort: 8080
+        volumeMounts:
+        - name: efs-storage-jenkins
+          mountPath: /var/lib/jenkins
+      volumes:
+      - name: efs-storage-jenkins
+        persistentVolumeClaim:
+          claimName: efs-claim
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: jenkins-service
+  labels:
+    env: dev
 spec:
   type: NodePort
   selector:
     app: jenkins
   ports:
-    - port: 8080
-      targetPort: 8080
-      nodePort: 30001
+  - port: 8080
+    targetPort: 8080
+    nodePort: 30001
