--- a/terraform/deployments/applications/nexus_2.yaml
+++ b/terraform/deployments/applications/nexus_2.yaml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nexus
+  name: nexus-deploy
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: nexus-server
-  replicas: 1
   template:
     metadata:
       labels:
         app: nexus-server
     spec:
+      initContainers:
+      - name: volume-mount
+        image: busybox
+        command: [ "sh", "-c", "chown -R 200:200 /nexus-data" ]
+        volumeMounts:
+        - name: nexus-data
+          mountPath: /nexus-data
       containers:
         - name: nexus
           image: sonatype/nexus3:latest
-          resources:
-            limits:
-              memory: "4Gi"
-              cpu: "1000m"
-            requests:
-              memory: "2Gi"
-              cpu: "500m"
           ports:
             - containerPort: 8081
           volumeMounts:
@@ -35,11 +35,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nexus-service
+  annotations:
+      prometheus.io/scrape: 'true'
+      prometheus.io/path:   /
+      prometheus.io/port:   '8081'
 spec:
   selector:
     app: nexus-server
   type: NodePort
   ports:
-    - port: 8081
+    - port: 80
       targetPort: 8081
-      nodePort: 32000
+      nodePort: 30005
