--- a/terraform/deployments/applications/nexus.yaml
+++ b/terraform/deployments/applications/nexus.yaml
@@ -2,37 +2,49 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nexus-deploy
-  labels:
-    env: dev
-    app: nexus
-    project: javawebapp
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nexus
+      app: nexus-server
   template:
     metadata:
       labels:
-        app: nexus
+        app: nexus-server
     spec:
+      initContainers:
+      - name: volume-mount
+        image: busybox
+        command: [ "sh", "-c", "chown -R 200:200 /nexus-data" ]
+        volumeMounts:
+        - name: nexus-data
+          mountPath: /nexus-data
       containers:
-      - name: nexus
-        image: sonatype/nexus3
-        ports:
-        - containerPort: 8081
+        - name: nexus
+          image: sonatype/nexus3:latest
+          ports:
+            - containerPort: 8081
+          volumeMounts:
+            - name: nexus-data
+              mountPath: /nexus-data
+      volumes:
+        - name: nexus-data
+          persistentVolumeClaim:
+            claimName: efs-claim
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: nexus-service
+  annotations:
+      prometheus.io/scrape: 'true'
+      prometheus.io/path:   /
+      prometheus.io/port:   '8081'
 spec:
-  type: NodePort
   selector:
-    app: nexus
+    app: nexus-server
+  type: NodePort
   ports:
-  - port: 8081
-    protocol: TCP
-    targetPort: 8081
-    nodePort: 30003
-
+    - port: 8081
+      targetPort: 8081
+      nodePort: 30003
