--- a/terraform/deployments/applications/postgres.yaml
+++ b/terraform/deployments/applications/postgres.yaml
@@ -1,12 +1,13 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: postgres-deploy
+  name: postgres-statefulset
   labels:
     env: dev
     app: postgres
     project: javawebapp
 spec:
+  serviceName: postgres-service
   replicas: 1
   selector:
     matchLabels:
@@ -28,6 +29,13 @@ spec:
           value: sonarqube
         - name: POSTGRES_PASSWORD
           value: password
+        volumeMounts:
+        - name: postgres-data
+          mountPath: /var/lib/postgresql/data
+      volumes:
+      - name: postgres-data
+        persistentVolumeClaim:
+          claimName: pg-claim
 ---
 apiVersion: v1
 kind: Service
@@ -36,6 +44,43 @@ metadata:
 spec:
   selector:
     app: postgres
+  clusterIP: None
   ports:
     - protocol: TCP
       port: 5432
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: pg-sc
+provisioner: efs.csi.aws.com
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pg-pv
+spec:
+  capacity:
+    storage: 4Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: pg-sc
+  persistentVolumeReclaimPolicy: Retain
+  csi:
+    driver: efs.csi.aws.com
+    volumeHandle: fs-004712b7d74b095c5
+    volumeAttributes:
+      mounttargetip: "10.0.0.179"
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pg-claim
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: pg-sc
+  resources:
+    requests:
+      storage: 4Gi
